--- a/index.html
+++ b/index.html
@@ -20,15 +20,89 @@
             </p>
          </div>
 
-        <div class="number">
-         <a href="index2.html"><p> IIIIIIIIIIII</p></a>
-         <a href="index3.html"><p class="III1">II II II II II II</p></a>
-         <a href="index4.html"><p class="III2">III III III III III</p></a>
-         <a href="index5.html"><p class="IV1">IV IV IV IV IV IV</p></a>
-         <a href="index6.html"><p class="V1">V V V V V V V V</p></a>
-         <a href="index7.html"><p class="VI1">VI VI VI VI VI VI</p></a>
-        </div>
 
+         <a href="index2.html"><div class="flex-list">
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+            <li>I</li>
+           </div></a>
+
+           <a href="index3.html"><div class="flex-list">
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+               <li> II </li>
+           </div></a>
+
+           <a href="index4.html"><div class="flex-list">
+            <li> III </li>
+            <li> III </li>
+            <li> III </li>
+            <li> III </li>
+            <li> III </li>
+            <li> III </li>
+            <li> III </li>
+        </div></a>
+
+        <a href="index5.html"><div class="flex-list">
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+            <li> IV </li>
+        </div></a>
+
+        <a href="index6.html"><div class="flex-list">
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+            <li> V </li>
+        </div></a>
+
+
+        <a href="index7.html"><div class="flex-list">
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+            <li> VI</li>
+        </div></a>
+     
 
     </div>
 </body>
