--- a/index2.html
+++ b/index2.html
@@ -27,24 +27,22 @@
     <div class="header">
         The universe (which others call the Library) is composed of an indefinite and perhaps infinite number of hexagonal galleries, 
         with vast air shafts between, surrounded by very low railings.
-
     </div>
 
     <div class="main">
-        <p><span style="color: #0000a0">The universe (which others call the Library) is composed of an indefinite and perhaps infinite number of hexagonal galleries, 
+        <p>The universe (which others call the Library) is composed of an indefinite and perhaps infinite number of hexagonal galleries, 
             with vast air shafts between, surrounded by very low railings. From any of the hexagons one can see, interminably,
             the upper and lower floors. The distribution of the galleries is invariable. 
             Twenty shelves, five long shelves per side, cover all the sides except two; their height, 
             which is the distance from floor to ceiling, scarcely exceeds that of a normal bookcase. 
             One of the free sides leads to a narrow hallway which opens onto another gallery, identical to the first and to all the rest. 
-        </span><p>The left and right of the hallway there are two very small closets. In the first, one may sleep standing up; in the other, 
+            <p>The left and right of the hallway there are two very small closets. In the first, one may sleep standing up; in the other, 
             satisfy one's fecal necessities. Also through here passes a spiral stairway, which sinks abysmally and soars upwards to remote distances.
              In the hallway there is a mirror which faithfully duplicates all appearances. Men usually infer from this mirror that the Library is not infinite
               (if it were, why this illusory duplication?); I prefer to dream that its polished surfaces represent and promise the infinite... 
               Light is provided by some spherical fruit which bear the name of lamps. There are two, transversally placed, in each hexagon. The light they emit is insufficient, incessant. 
             </p> 
-            </p>
-        
+            </p>  
     </div>
 
     <div class="note1">
